# opengl-learn

./: CMakeLists.txt  README.md
include/: camera_manager.h  render_system.h  shader_manager.h  texture_manager.h  vao_manager.h  window_manager.h
resources/shaders/: fs_2.frag  fs_3.frag  vs_1.vert  vs_2.vert  vs_3.vert
src/: camera_manager.cpp  main.cpp  render_system.cpp  shader_manager.cpp  texture_manager.cpp  vao_manager.cpp  window_manager.cpp
